ci: fix black step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
       run: |
         python -m poetry run isort .
     - name: Format using black src tests
+      run: |
+        python -m black src tests
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
