chore: ignore mypy missing imports

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,6 +2,8 @@
 allow_untyped_calls = False
 follow_imports = skip
 plugins = numpy.typing.mypy_plugin
+ignore_missing_imports = True
+
 
 [mypy-PyYAML]
 ignore_missing_imports = True
