--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   Quality:
-    runs-on: ubuntu-latest
+    runs-on: python:3.8.12-slim-buster
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -27,6 +27,7 @@ jobs:
       run: poetry --version
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         python -m poetry install
     - name: Sort imports using isort
       run: |
