fix: cleanup and testing for create_sample_project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "kedro_dvc", from = "src"}]
 dvc = "^2.9.3"
 kedro = ">=0.17.7, <0.19"
 numpy = "^1.22.2"
+pygit2 = "^1.9.0"
 python = ">=3.8, <3.9"
 
 [tool.poetry.dev-dependencies]
@@ -32,12 +33,14 @@ requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@
 "build:docker" = "docker build -t factfiber/kedro-dvc-test ."
 create-sample-project = "bin/create-sample-project.sh"
 "run:docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest"
-"test-watch-cov:docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run ptw -- --last-failed --new-first --cov --cov-report term-missing"
+"test-cov:docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run pytest --cov --cov-report term-missing"
+"test-cov:local" = "poetry run pytest --cov --cov-report term-missing"
+"test-watch-cov:docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run ptw -- --last-failed --new-first --cov --cov-report term-missing tests"
 "test-watch-cov:local" = "poetry run ptw -- --last-failed --new-first  --cov --cov-report term-missing"
 "test-watch:docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run ptw -- --last-failed --new-first"
 "test-watch:local" = "poetry run ptw -- --last-failed --new-first"
-"test:docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run ptw -- --last-failed --new-first"
-"test:local" = "poetry run ptw -- --last-failed --new-first"
+"test:docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run pytest"
+"test:local" = "poetry run pytest"
 
 # NB poetry does not (yet?) support PEP 621
 [tool.poetry.plugins."kedro.project_commands"]
@@ -73,4 +76,11 @@ upload_to_release = true
 version_variable = [
   "src/kedro_dvc/__init__.py:__version__",
   "pyproject.toml:version",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
+markers = [
+  "slow: mark test as slow to run",
 ]
