--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   Quality:
-    runs-on: python:3.8.12-slim-buster
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -46,21 +46,34 @@ jobs:
       run: |
         python -m poetry run pytest -v tests --cov-fail-under=100
     
-  # Release:
-  #   needs: Quality
-  #   runs-on: ubuntu-latest
-  #   concurrency: release
-  #   # https://github.community/t/how-do-i-specify-job-dependency-running-in-another-workflow/16482
-  #   if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && !contains(github.event.head_commit.message, 'chore(release):')
+  Release:
+    needs: Quality
+    runs-on: ubuntu-latest
+    concurrency: release
+    # https://github.community/t/how-do-i-specify-job-dependency-running-in-another-workflow/16482
+    if: github.event_name == 'push' && !contains(github.event.head_commit.message, 'chore(release):')
 
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #     with:
-  #       fetch-depth: 0
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - name: Install semantic-release
+        run: npm install -g semantic-release @semantic-release/github @semantic-release/commit-analyzer @semantic-release/git @semantic-release/release-notes-generator "@google/semantic-release-replace-plugin"
+        # semantic-release-pypi
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install setuptools
+        run: python -m pip install --upgrade setuptools wheel twine
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+          # PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        run: npx semantic-release
 
-  #   - name: Python Semantic Release
-  #     uses: relekang/python-semantic-release@master
-  #     with:
-  #       github_token: ${{ secrets.GITHUB_TOKEN }}
-  #       repository_username: __token__
-  #       repository_password: ${{ secrets.PYPI_TOKEN }}
