--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install Python Poetry
       uses: abatilo/actions-poetry@v2.1.4
       with:
-        poetry-version: 1.1.12
+        poetry-version: 1.2.0b1
     - name: Configure poetry
       shell: bash
       run: python -m poetry config virtualenvs.in-project true
