--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: install git
+      run: sudo apt-get install -y git
     - uses: actions/setup-python@v2
       with:
         python-version: 3.9
