--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ packages = [{include = "kedro_dvc", from = "src"}]
 anyconfig = ">=0.10"
 dvc = ">=2.10,<3"
 kedro = ">=0.18.0, <1"
-numpy = "^1.22.2"
 pygit2 = "^1.9.0"
 python = ">=3.8, <3.10"
 
@@ -20,6 +19,7 @@ black = "^22.3.0"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
 mypy = "^0.931"
+numpy = ">=1.21"
 pre-commit = "^2.17.0"
 pytest = "^7.0.0"
 pytest-cases = "^3.6.8"
