--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dvc = ">=2.11,<3"
 kedro = ">=0.18.0, <1"
 pygit2 = "^1.9.0"
 python = ">=3.8, <3.10"
+click = "^8.1.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.3.0"
@@ -46,7 +47,7 @@ create-sample-project = "bin/create-sample-project.sh"
 
 # NB poetry does not (yet?) support PEP 621
 [tool.poetry.plugins."kedro.project_commands"]
-dvc = "kedro_dvc.cli:kedro_dvc_cli"
+kedro_dvc_cli = "kedro_dvc.cli:kedro_dvc_cli"
 
 [tool.black]
 exclude = '''
